# rust-dev-test

./: .gitmodules  README.md
api/: .env.example  Cargo.toml
api/src/: main.rs
api/src/structs/: api_response.rs  collect_request.rs  disperse_request.rs  mod.rs
disperse-collect-contract/script/: DisperseCollect.s.sol
disperse-collect-contract/src/: DisperseCollect.sol
disperse-collect-contract/src/interfaces/: IDisperseCollect.sol
disperse-collect-contract/test/: DisperseCollect.t.sol  MockedERC20.sol
