[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]  
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.5"
ethers = { version = "2.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"